--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@ current: index
   <div class="wrap">
   <header class="d-flex justify-content-between align-items-center mb-44">
     <div class="d-flex align-items-center">
-      <h2 class="fs-4 me-5 fw-bold">Assignment</h2>
+      <h2 class="fs-4 me-5 fw-bold mb-0">Assignment</h2>
       <div class="dropdown ">
         <a href="#" class="fw-bold" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">All Courses<span class="material-symbols-rounded fw-bold ps-2 align-middle text-success">
       expand_more
